--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
           </ul>
         </div>
         <div class="card">
-          <p class="title">Technical Skills</p>
+          <p class="title">Software Skills</p>
           <hr>
           <ul class="list-u">
             <li><i class="text-muted"><strong>LaTeX, Microsoft Word, Excel, PowerPoint, MATLAB</strong>, etc.</i></li>
