--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <hr>
         <!-- Profile links (icons only, raw placeholders for now) -->
         <div class="text-center">
-          <a href="mailto:ananta.raha.99@gmail.com" class="link-button">[ananta.raha@gmail.com]</a>
+          <a href="mailto:ananta.raha.99@gmail.com" class="link-button">[ananta.raha.99@gmail.com]</a>
         </div>
         <div class="text-center space-x-2 md:space-x-4">
           <a href="https://github.com/anantaraha" title="GitHub" class="link-button" target="_blank" rel="noopener noreferrer">[GitHub]</a>
@@ -560,7 +560,7 @@
     <section id="sec-contact" class="section">
       <div class="section-title">Contact</div>
       <div class="card text-center">
-        <p>Email: <a href="mailto:ananta.raha.99@gmail.com">ananta.raha@gmail.com</a></p>
+        <p>Email: <a href="mailto:ananta.raha.99@gmail.com">ananta.raha.99@gmail.com</a></p>
         <p>Dhaka 1205, Bangladesh</p>
         <hr>
         <p>Feel free to reach out for research collaborations or inquiries.</p>
