Update portfolio: publications and research

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
           Following my undergraduate thesis on computationally-efficient brain tumor segmentation (from MRI), I have researched lightweight CNN architectures in medical diagnosis and precision agriculture. During my master's studies, I worked on independent and team projects in diverse areas like automatic malaria diagnosis, edge-ML for sericulture, neural network privacy, RNA-seq read disambiguation, and human-computer interaction. These experiences have reinforced my skills and perspective on practical ML applications.
         </p>
         <p>
-          Currently, my master's thesis focuses on multimodal fusion (Text + Vision) learning to improve radiological segmentation tasks. Additionally, I am actively seeking Ph.D. opportunities where I can contribute to rigorous research in on-device, trustworthy neural networks for applications in healthcare and precision agriculture.
+          Currently, my master's thesis focuses on multimodal fusion (Text + Vision) learning to improve radiological segmentation tasks. Additionally, I am actively seeking Ph.D. opportunities where I can contribute to quality research in on-device, trustworthy neural networks for applications in healthcare and precision agriculture.
         </p>
         <hr>
         <!-- Profile links (icons only, raw placeholders for now) -->
@@ -275,18 +275,32 @@
         <ul class="list">
           <!-- Example: Latest publication first -->
           <li>
-            <strong>Raha, A.</strong> (2025) Lightweight COVID-19 Detection from Chest CT-Scans Using Attention-Based CNN. <i>SN Computer Science</i> (Accepted, in press)
+            <strong>Raha, A.</strong> Lightweight COVID-19 Detection from Chest CT-Scans Using Attention-Based CNN. <i>SN Computer Science</i>, Vol. 6, 853 (2025). <i>DOI: <a href="https://doi.org/10.1007/s42979-025-04403-5" title="DOI" target="_blank" rel="noopener noreferrer">10.1007/s42979-025-04403-5</a></i>
+            <a href="https://rdcu.be/eIeLu" title="Preprint" class="link-button" download="Lightweight COVID-19 Detection from Chest CT-Scans Using Attention-Based CNN.pdf" target="_blank" rel="noopener noreferrer">[Read Online]</a>
           </li>
           <hr>
           <li>
-            <strong>Raha, A.</strong> and Q. S. Tasnim. Efficient Mulberry Leaf Disease Detection in Bangladesh: A Lightweight Approach for Real-Time Applications. <i>2025 International Conference on Electrical, Computer and Communication Engineering (ECCE)</i>, Chittagong, Bangladesh, 2025, pp. 1-6, doi: <a href="https://doi.org/10.1109/ECCE64574.2025.11013948" title="DOI" target="_blank" rel="noopener noreferrer">10.1109/ECCE64574.2025.11013948</a>
+            <strong>Raha, A.</strong> and Q. S. Tasnim. Efficient Mulberry Leaf Disease Detection in Bangladesh: A Lightweight Approach for Real-Time Applications. <i>2025 International Conference on Electrical, Computer and Communication Engineering (ECCE)</i>, Chittagong, Bangladesh, 2025, pp. 1-6, <i>DOI: <a href="https://doi.org/10.1109/ECCE64574.2025.11013948" title="DOI" target="_blank" rel="noopener noreferrer">10.1109/ECCE64574.2025.11013948</a></i>
             <a href="docs/preprint_raha2025mulberry.pdf" title="Preprint" class="link-button" download="Efficient Mulberry Leaf Disease Detection in Bangladesh A Lightweight Approach for Real-Time Applications.pdf" target="_blank" rel="noopener noreferrer">[Download Preprint]</a>
           </li>
           <hr>
           <li>
-            <strong>Raha, A.</strong>, Parvin, F., Jannat, T. (2024). Brain Tumor Segmentation with Efficient and Low-Complex Architecture Using RCNN and Modified U-Net. In: Arefin, M.S., Kaiser, M.S., Bhuiyan, T., Dey, N., Mahmud, M. (eds) Proceedings of the 2nd International Conference on Big Data, IoT and Machine Learning. BIM 2023. <i>Lecture Notes in Networks and Systems</i>, vol 867. Springer, Singapore. <a href="https://doi.org/10.1007/978-981-99-8937-9_22" title="DOI" target="_blank" rel="noopener noreferrer">https://doi.org/10.1007/978-981-99-8937-9_22</a>
+            <strong>Raha, A.</strong>, Parvin, F., Jannat, T. (2024). Brain Tumor Segmentation with Efficient and Low-Complex Architecture Using RCNN and Modified U-Net. In: Arefin, M.S., Kaiser, M.S., Bhuiyan, T., Dey, N., Mahmud, M. (eds) Proceedings of the 2nd International Conference on Big Data, IoT and Machine Learning. BIM 2023. <i>Lecture Notes in Networks and Systems</i>, vol 867. Springer, Singapore. <i>DOI: <a href="https://doi.org/10.1007/978-981-99-8937-9_22" title="DOI" target="_blank" rel="noopener noreferrer">10.1007/978-981-99-8937-9_22</a></i>
               <a href="docs/preprint_raha2023.pdf" title="Preprint" class="link-button" download="Brain Tumor Segmentation with Efficient and Low-Complex Architecture Using RCNN and Modified U-Net.pdf" target="_blank" rel="noopener noreferrer">[Download Preprint]</a>
             </li>
+        </ul>
+      </div>
+      <div class="card">
+        <div class="title">Currently Under Review</div>
+        <hr>
+        <ul class="list-u">
+          <li>
+            Hossain, M., Sultana, A., Datta, S., <strong>Raha, A.</strong>, Khan, S., Ahmed, R., Sharmin, S. (2025) <i>Analyzing Gamification in E-learning Tools: HCI-Driven Insights from University Students in Bangladesh</i>
+          </li>
+          <hr>
+          <li>
+            <strong>Raha, A.</strong>, Ahmed, J., Hossain, M.S., Majumdar, S. (2025) <i>Defending Model Inversion Attack Using an Improved Filter-Based Approach</i>
+          </li>
         </ul>
       </div>
     </section>
@@ -300,11 +314,14 @@
       <!-- Project 1 -->
       <div class="card">
         <div class="title">Ambiguity Resolution in Multi-Mapping Short Reads Using Deep Neural Networks</div>
-        <p class="chip-group"><span class="chip">2025</span> <span class="chip">Postgraduate</span> <span class="chip">Collaborative</span></p>
+        <p class="chip-group">
+          <span class="chip">2025</span> <span class="chip">Postgraduate</span> <span class="chip">Collaborative</span>
+          <a href="https://github.com/anantaraha/buet_cse6411_project" title="Source" class="link-button ml-auto" target="_blank" rel="noopener noreferrer">[View Source]</a>
+        </p>
         <hr>
-        <p class="text-muted"><i><strong>Keywords:</strong> Sequencing, Gene Expression, Illumina, Computational Biology, Short Reads</i></p>
+        <p class="text-muted"><i><strong>Keywords:</strong> Sequencing, Gene Expression, Illumina, Computational Biology, Short Reads, MLP</i></p>
         <p>
-          Sequencing systems generate short reads during genome sequencing, which need to be aligned later on a reference genome for analysis. In pair-ended mode, some reads map to multiple locations, introducing ambiguity. This project aims to address this issue by utilizing RNAseq context, read coverage, and an MLP. The experimental results are promising compared to Random Forest.
+          NGS technologies produce short reads that are aligned to a reference genome for downstream analysis. In paired-end mode, some reads map to multiple loci, introducing ambiguity. This project minimizes that issue with an MLP-based filter that predicts and discards incorrect alignments of multi-mapping reads reported by the aligner. The approach derives context-aware features—including read coverage, RNA-seq, and k-mers. Evaluated on Bowtie2 alignments for two reference genomes (Escherichia coli and Bacillus subtilis), the trained classifier reduces the overall misalignment rate by substantial margins.
         </p>
       </div>
 
@@ -547,7 +564,7 @@
             <strong>2nd International Conference on Big Data, IoT and Machine Learning</strong><br>
             Sep 6-8, Dhaka, Bangladesh<br>
             <i class="text-muted"><strong>Presented research:</strong> “Brain Tumor Segmentation with Efficient and Low-Complex Architecture Using RCNN and Modified U-Net.”</i>
-            <a href="#" title="Certificate" class="hidden link-button" download="Certificate_AnantaRaha_BIM2023" rel="noopener noreferrer">[View Certificate]</a>
+            <a href="docs/cert_conf_bim2023.pdf" title="Certificate" class="link-button" download="Certificate_AnantaRaha_BIM2023" rel="noopener noreferrer">[View Certificate]</a>
           </div>
         </div>
       </div>
