Update portfolio: research

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
         <hr>
         <p class="text-muted"><i><strong>Keywords:</strong> Sequencing, Gene Expression, Illumina, Computational Biology, Short Reads, MLP</i></p>
         <p>
-          NGS technologies produce short reads that are aligned to a reference genome for downstream analysis. In paired-end mode, some reads map to multiple loci, introducing ambiguity. This project minimizes that issue with an MLP-based filter that predicts and discards incorrect alignments of multi-mapping reads reported by the aligner. The approach derives context-aware features—including read coverage, RNA-seq, and k-mers. Evaluated on Bowtie2 alignments for two reference genomes (Escherichia coli and Bacillus subtilis), the trained classifier reduces the overall misalignment rate by substantial margins.
+          NGS technologies produce short reads that are aligned to a reference genome for downstream analysis. In paired-end mode, some reads map to multiple loci, introducing ambiguity. This project minimizes that issue with an MLP-based filter that predicts and discards incorrect alignments of multi-mapping reads reported by the aligner. The approach derives context-aware features—including read coverage, RNA-seq, and k-mers. Evaluated on Bowtie2 alignments for two reference genomes (<i>Escherichia coli</i> and <i>Bacillus subtilis</i>), the trained classifier reduces the overall misalignment rate by substantial margins.
         </p>
       </div>
 
@@ -381,7 +381,7 @@
         <div class="title">Lightweight COVID-19 Detection from Chest CT-Scans Using Attention-Based CNN</div>
         <p class="chip-group">
           <span class="chip">2024</span> <span class="chip">Independent</span> <span class="chip">Individual</span>
-          <a href="#" title="Paper" class="hidden link-button ml-auto" target="_blank" rel="noopener noreferrer">[Download Paper]</a>
+          <a href="https://rdcu.be/eIeLu" title="Paper" class="link-button ml-auto" target="_blank" rel="noopener noreferrer">[Read Paper]</a>
         </p>
         <hr>
         <p class="text-muted"><i><strong>Keywords:</strong> Medical Imaging, Computer Vision, Deep Learning, Classification</i></p>
