Update portfolio: cv, publications and conferences

--- a/index.html
+++ b/index.html
@@ -241,7 +241,6 @@
           <div class="flex-1">
             <strong>M.Sc. in Computer Science and Engineering</strong><br>
             Bangladesh University of Engineering and Technology (BUET) <a href="http://buet.ac.bd" title="BUET" class="link-button" target="_blank" rel="noopener noreferrer">[Web]</a><br>
-            Current CGPA: <strong>3.83</strong>
           </div>
         </div>
         <hr>
@@ -251,7 +250,7 @@
           <div class="flex-1">
             <strong>B.Sc. in Computer Science and Engineering</strong><br>
             Rajshahi University of Engineering & Technology (RUET) <a href="http://ruet.ac.bd" title="RUET" class="link-button" target="_blank" rel="noopener noreferrer">[Web]</a><br>
-            CGPA: <strong>3.54</strong><br>
+            CGPA: <strong>3.54</strong> | CGPA of Last Two Semesters: <strong>3.72</strong><br>
             Thesis: <i class="text-muted">Automated Detection and Segmentation of Brain Tumor Using Low-Complex RCNN and Modified U-Net</i>
           </div>
         </div>
@@ -291,15 +290,15 @@
         </ul>
       </div>
       <div class="card">
-        <div class="title">Currently Under Review</div>
+        <div class="title">Currently in Press</div>
         <hr>
         <ul class="list-u">
           <li>
-            Hossain, M., Sultana, A., Datta, S., <strong>Raha, A.</strong>, Khan, S., Ahmed, R., Sharmin, S. (2025) <i>Analyzing Gamification in E-learning Tools: HCI-Driven Insights from University Students in Bangladesh</i>
+            <strong>Raha, A.</strong>, Ahmed, J., Hossain, M.S., Majumdar, S. (2025). Defending Model Inversion Attack Using an Improved Filter-Based Approach. (<strong>Accepted</strong>, to appear; <i>18th Intl. Symp. on Foundations & Practice of Security–Brest, France</i>)
           </li>
           <hr>
           <li>
-            <strong>Raha, A.</strong>, Ahmed, J., Hossain, M.S., Majumdar, S. (2025) <i>Defending Model Inversion Attack Using an Improved Filter-Based Approach</i>
+            Datta, S., <strong>Raha, A.</strong>, Sharmin, S. (2025). The Body’s Whisper: A Privacy-Preserving, Reason-Aligned Micro-Break Assistant for Remote Workers. (<strong>Accepted</strong>, to appear; <i>28th Intl. Conf. on Human-Computer Interaction–Montreal, Canada</i>)
           </li>
         </ul>
       </div>
@@ -354,7 +353,10 @@
       <!-- Project 4 -->
       <div class="card">
         <div class="title">Defending Model Inversion Attack using An Improved Filter-Based Approach</div>
-        <p class="chip-group"><span class="chip">2025</span> <span class="chip">Postgraduate</span> <span class="chip">Collaborative</span></p>
+        <p class="chip-group">
+          <span class="chip">2025</span> <span class="chip">Postgraduate</span> <span class="chip">Collaborative</span>
+          <a href="https://github.com/anantaraha/buet_cse6813_project" title="Source" class="link-button ml-auto" target="_blank" rel="noopener noreferrer">[View Source]</a>
+        </p>
         <hr>
         <p class="text-muted"><i><strong>Keywords:</strong> Neural Network Security, Defense</i></p>
         <p>
@@ -532,7 +534,7 @@
         <div class="title">Awards Receieved</div>
         <hr>
         <ul class="list">
-          <li><strong>Fellowship – BUET MSc Program</strong> (April 2024) in recognition of academic excellence.</li>
+          <li><strong>Fellowship – BUET MSc Program</strong> (Semester: October 2024) in recognition of academic excellence.</li>
           <hr>
           <li><strong>Education Board Scholarship</strong> (2017, 2015, 2012) for excellence in the <i>HSC, SSC, and JSC Examinations</i>, respectively.</li>
           <hr>
@@ -547,6 +549,15 @@
       <!-- Certifications & Conferences Subsection -->
       <div class="card">
         <div class="title">Conferences Attended</div>
+        <hr>
+        <div class="flex items-start">
+          <div class="w-18 md:w-24">2025</div>
+          <div class="flex-1">
+            <strong>18th International Symposium on Foundations & Practice of Security</strong><br>
+            Nov 25-27, Brest, France<br>
+            <i class="text-muted"><strong>Presented research:</strong> “Defending Model Inversion Attack Using an Improved Filter-Based Approach.”</i>
+          </div>
+        </div>
         <hr>
         <div class="flex items-start">
           <div class="w-18 md:w-24">2025</div>
