--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
         after:left-0 after:h-1 after:w-full after:top-[min(75cqw,240px)]
         after:md:left-[30%] after:md:w-1 after:md:h-full after:md:top-0
         after:bg-[var(--color-prim)]
-        hover:after:scale-x-125 after:origin-left;
+        hover:after:scale-y-125 after:origin-top
+        hover:md:after:scale-y-100 hover:md:after:scale-x-125 after:md:origin-left;
       }
 
       .thumbnail-card-image {
@@ -284,7 +285,7 @@
 
 </head>
 
-<body class="bg-[var(--color-bg)] antialiased leading-relaxed min-h-screen font-[var(--font-fam1)] text-base md:text-lg  text-[var(--color-txt2)]">
+<body class="bg-[var(--color-bg)] antialiased leading-relaxed min-h-screen font-[family-name:var(--font-fam1)] text-base md:text-lg  text-[var(--color-txt2)]">
 
   <!-- Header -->
   <header id="nav-bar" class="bg-white shadow-md fixed w-full top-0 z-50">
