--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
       }
 
       .link {
-        @apply font-mono underline hover:text-[var(--color-txt1)];
+        @apply font-mono underline hover:text-[var(--color-txt1)] break-all;
       }
 
       .link-button {
